--- a/media/build.gradle
+++ b/media/build.gradle
@@ -11,8 +11,8 @@ android {
     defaultConfig {
         minSdk 24
         targetSdk 33
-        versionCode 11
-        versionName "0.1.11"
+        versionCode 50
+        versionName "0.1.50"
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
 
@@ -62,16 +62,17 @@ dependencies {
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
 
     //Common
-    implementation 'com.github.Truvideo:truvideo-sdk-android-common:0.0.4'
-    implementation("org.jetbrains.kotlinx:kotlinx-coroutines-core:1.7.1")
+    implementation 'com.github.Truvideo:truvideo-sdk-android-common:0.0.7'
+
+    var ktorVersion = "2.3.2"
+    implementation("org.jetbrains.kotlinx:kotlinx-coroutines-core:1.7.2")
+    implementation("io.ktor:ktor-client-core:$ktorVersion")
+    implementation("io.ktor:ktor-client-logging:$ktorVersion")
+    implementation("io.ktor:ktor-client-okhttp:$ktorVersion")
     implementation("org.jetbrains.kotlinx:kotlinx-serialization-json:1.5.1")
-    implementation("org.jetbrains.kotlinx:kotlinx-datetime:0.4.0")
     implementation("com.russhwolf:multiplatform-settings:1.0.0")
-    implementation("com.russhwolf:multiplatform-settings-no-arg:1.0.0")
-    implementation("io.ktor:ktor-client-core:2.3.2")
-    implementation("io.ktor:ktor-client-okhttp:2.3.2")
-    implementation("io.ktor:ktor-client-logging:2.3.2")
-    implementation("org.lighthousegames:logging:1.3.0")
+    implementation("org.jetbrains.kotlinx:kotlinx-datetime:0.4.0")
+    implementation("co.touchlab:kermit:2.0.0-RC5")
 }
 
 project.afterEvaluate {
