--- a/media/build.gradle
+++ b/media/build.gradle
@@ -68,6 +68,8 @@ dependencies {
     implementation 'androidx.lifecycle:lifecycle-extensions:2.2.0'
     implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.7.0'
     implementation 'androidx.lifecycle:lifecycle-livedata-ktx:2.7.0'
+    implementation("org.jetbrains.kotlinx:kotlinx-serialization-json:1.6.0")
+
 
     // S3
     implementation 'com.amazonaws:aws-android-sdk-mobile-client:2.16.6'
