new deployment method

--- a/media/build.gradle
+++ b/media/build.gradle
@@ -96,10 +96,18 @@ project.afterEvaluate {
     publishing {
         publications {
             library(MavenPublication) {
-                setGroupId 'com.truvideo.sdk'
-                setArtifactId 'media'
+                setGroupId 'com.truvideo'
+                setArtifactId 'sdk-media'
                 version android.defaultConfig.versionName
-                artifact bundleBetaReleaseAar
+
+                def environment = properties.getProperty("environment")
+                if (environment == "beta") {
+                    artifact bundleBetaReleaseAar
+                } else if (environment == "rc") {
+                    artifact bundleRcReleaseAar
+                } else {
+                    artifact bundleProdReleaseAar
+                }
 
                 pom.withXml {
                     //noinspection GroovyImplicitNullArgumentCall
