--- a/app/build.gradle
+++ b/app/build.gradle
@@ -37,7 +37,7 @@ android {
         compose true
     }
     composeOptions {
-        kotlinCompilerExtensionVersion '1.5.3'
+        kotlinCompilerExtensionVersion '1.5.14'
     }
     packaging {
         resources {
@@ -45,6 +45,8 @@ android {
         }
     }
 }
+
+apply from: './lib-flavors.gradle'
 
 dependencies {
     implementation(project(":media"))
@@ -64,8 +66,7 @@ dependencies {
     implementation("androidx.media3:media3-exoplayer:1.3.0")
     implementation("androidx.media3:media3-ui:1.3.0")
 
-    implementation 'com.github.truvideo:truvideo-sdk-android-core:0.2.03'
-    implementation("com.github.truvideo:truvideo-sdk-android-common:0.0.32")
+    implementation 'com.github.Truvideo:truvideo-sdk-android-core:70.1.2-rc.84'
 
     // Truvideo SDK Components
     implementation("com.github.truvideo:truvideo-sdk-android-components:0.1.11")
