--- a/app/build.gradle
+++ b/app/build.gradle
@@ -66,8 +66,7 @@ dependencies {
     implementation("androidx.media3:media3-exoplayer:1.3.1")
     implementation("androidx.media3:media3-ui:1.3.1")
 
-    implementation 'com.github.Truvideo:truvideo-sdk-android-core:70.1.2-rc.84'
-
-    // Truvideo SDK Components
-    implementation("com.github.truvideo:truvideo-sdk-android-components:0.1.11")
+    // Truvideo SDK
+    implementation 'com.github.Truvideo:truvideo-sdk-android-core:71.1.1-beta.85'
+    implementation 'com.github.Truvideo:truvideo-sdk-android-components:0.1.13'
 }
