--- a/media/build.gradle
+++ b/media/build.gradle
@@ -3,6 +3,7 @@ plugins {
     id 'org.jetbrains.kotlin.android'
     id 'maven-publish'
     id 'com.google.devtools.ksp'
+    id 'org.jetbrains.kotlin.plugin.serialization'
 }
 
 def propertiesFile = rootProject.file("media/src/main/assets/version.properties")
@@ -69,6 +70,10 @@ dependencies {
     implementation 'androidx.lifecycle:lifecycle-livedata-ktx:2.8.0'
     implementation 'org.jetbrains.kotlinx:kotlinx-serialization-json:1.6.0'
 
+    // Common
+    var commonVersion = properties.getProperty("commonVersion")
+    implementation("com.github.Truvideo:truvideo-sdk-android-common:$commonVersion")
+
     // S3
     implementation 'com.amazonaws:aws-android-sdk-mobile-client:2.16.6'
     implementation 'com.amazonaws:aws-android-sdk-s3:2.44.0'
@@ -79,6 +84,7 @@ dependencies {
     annotationProcessor "androidx.room:room-compiler:2.6.1"
     ksp "androidx.room:room-compiler:2.6.1"
 
+    // Test
     testImplementation 'junit:junit:4.13.2'
     testImplementation "androidx.test:core:1.5.0"
     testImplementation "org.mockito:mockito-core:5.4.0"
@@ -86,10 +92,6 @@ dependencies {
     testImplementation "io.mockk:mockk:1.13.5"
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
-
-    // Common
-    var commonVersion = properties.getProperty("commonVersion")
-    implementation("com.github.Truvideo:truvideo-sdk-android-common:$commonVersion")
 }
 
 project.afterEvaluate {
