--- a/app/build.gradle
+++ b/app/build.gradle
@@ -26,22 +26,27 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
     }
+
     compileOptions {
         sourceCompatibility JavaVersion.VERSION_1_8
         targetCompatibility JavaVersion.VERSION_1_8
     }
+
     kotlinOptions {
         jvmTarget = '1.8'
     }
+
     buildFeatures {
         compose true
     }
+
     composeOptions {
-        kotlinCompilerExtensionVersion '1.5.14'
+        kotlinCompilerExtensionVersion '1.5.3'
     }
+
     packaging {
         resources {
-            excludes += '/META-INF/{AL2.0,LGPL2.1}'
+            it.excludes += '/META-INF/{AL2.0,LGPL2.1}'
         }
     }
 }
@@ -49,7 +54,6 @@ android {
 apply from: './lib-flavors.gradle'
 
 dependencies {
-    implementation(project(":media"))
 
     implementation("androidx.core:core-ktx:1.13.1")
     implementation("androidx.lifecycle:lifecycle-runtime-ktx:2.8.0")
@@ -67,6 +71,7 @@ dependencies {
     implementation("androidx.media3:media3-ui:1.3.1")
 
     // Truvideo SDK
+    implementation(project(":media"))
     implementation 'com.github.Truvideo:truvideo-sdk-android-core:71.1.1-beta.85'
-    implementation 'com.github.Truvideo:truvideo-sdk-android-components:0.1.13'
+    implementation 'com.github.Truvideo:truvideo-sdk-android-components:0.1.15'
 }
