added file picker
added video an image picker
added permission handler
better ui for app module

--- a/media/build.gradle
+++ b/media/build.gradle
@@ -69,6 +69,7 @@ dependencies {
     implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.8.0'
     implementation 'androidx.lifecycle:lifecycle-livedata-ktx:2.8.0'
     implementation 'org.jetbrains.kotlinx:kotlinx-serialization-json:1.6.0'
+    implementation 'androidx.activity:activity-compose:1.9.0'
 
     // Common
     var commonVersion = properties.getProperty("commonVersion")
