--- a/app/build.gradle
+++ b/app/build.gradle
@@ -54,18 +54,28 @@ android {
 apply from: './lib-flavors.gradle'
 
 dependencies {
-
     implementation("androidx.core:core-ktx:1.13.1")
     implementation("androidx.lifecycle:lifecycle-runtime-ktx:2.8.0")
-    implementation("com.google.accompanist:accompanist-permissions:0.35.0-alpha")
 
     // Compose
-    implementation("androidx.activity:activity-compose:1.9.0")
-    implementation("androidx.compose.ui:ui:1.6.7")
-    implementation("androidx.compose.ui:ui-graphics:1.6.7")
-    implementation("androidx.compose.ui:ui-tooling-preview:1.6.7")
-    implementation("androidx.compose.material3:material3:1.2.1")
-    implementation("androidx.compose.material:material-icons-extended:1.6.7")
+    implementation platform('androidx.compose:compose-bom:2024.05.00')
+    implementation "androidx.core:core-ktx"
+    implementation "androidx.activity:activity-compose"
+    implementation "androidx.compose.ui:ui"
+    implementation "androidx.compose.ui:ui-graphics"
+    implementation "androidx.compose.ui:ui-tooling-preview"
+    implementation "androidx.compose.material3:material3"
+    implementation "androidx.compose.runtime:runtime-livedata"
+    implementation 'androidx.lifecycle:lifecycle-runtime-compose'
+    implementation "androidx.lifecycle:lifecycle-runtime-compose"
+    implementation "androidx.lifecycle:lifecycle-viewmodel-compose"
+    implementation 'androidx.lifecycle:lifecycle-service'
+    implementation "androidx.lifecycle:lifecycle-runtime-ktx"
+    implementation "androidx.compose.material:material-icons-extended"
+    debugImplementation "androidx.compose.ui:ui-tooling"
+    debugImplementation "androidx.compose.ui:ui-test-manifest"
+
+    // Media/Video
     implementation("com.github.bumptech.glide:compose:1.0.0-beta01")
     implementation("androidx.media3:media3-exoplayer:1.3.1")
     implementation("androidx.media3:media3-ui:1.3.1")
