--- a/gradle.properties
+++ b/gradle.properties
@@ -1,4 +1,5 @@
-android.nonTransitiveRClass=true
+org.gradle.jvmargs=-Xmx2048m -Dfile.encoding=UTF-8
+android.enableJetifier=true
 android.useAndroidX=true
 kotlin.code.style=official
-org.gradle.jvmargs=-Xmx2048m -Dfile.encoding\=UTF-8
+android.nonTransitiveRClass=true
