--- a/app/build.gradle
+++ b/app/build.gradle
@@ -26,47 +26,62 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
     }
+
     compileOptions {
         sourceCompatibility JavaVersion.VERSION_1_8
         targetCompatibility JavaVersion.VERSION_1_8
     }
+
     kotlinOptions {
         jvmTarget = '1.8'
     }
+
     buildFeatures {
         compose true
     }
+
     composeOptions {
         kotlinCompilerExtensionVersion '1.5.3'
     }
+
     packaging {
         resources {
-            excludes += '/META-INF/{AL2.0,LGPL2.1}'
+            it.excludes += '/META-INF/{AL2.0,LGPL2.1}'
         }
     }
 }
 
-dependencies {
-    implementation(project(":media"))
+apply from: './lib-flavors.gradle'
 
-    implementation("androidx.core:core-ktx:1.12.0")
-    implementation("androidx.lifecycle:lifecycle-runtime-ktx:2.7.0")
-    implementation("com.google.accompanist:accompanist-permissions:0.35.0-alpha")
+dependencies {
+    implementation("androidx.core:core-ktx:1.13.1")
+    implementation("androidx.lifecycle:lifecycle-runtime-ktx:2.8.0")
 
     // Compose
-    implementation("androidx.activity:activity-compose:1.8.2")
-    implementation("androidx.compose.ui:ui:1.6.4")
-    implementation("androidx.compose.ui:ui-graphics:1.6.4")
-    implementation("androidx.compose.ui:ui-tooling-preview:1.6.4")
-    implementation("androidx.compose.material3:material3:1.2.1")
-    implementation("androidx.compose.material:material-icons-extended:1.6.4")
+    implementation platform('androidx.compose:compose-bom:2024.05.00')
+    implementation "androidx.core:core-ktx"
+    implementation "androidx.activity:activity-compose"
+    implementation "androidx.compose.ui:ui"
+    implementation "androidx.compose.ui:ui-graphics"
+    implementation "androidx.compose.ui:ui-tooling-preview"
+    implementation "androidx.compose.material3:material3"
+    implementation "androidx.compose.runtime:runtime-livedata"
+    implementation 'androidx.lifecycle:lifecycle-runtime-compose'
+    implementation "androidx.lifecycle:lifecycle-runtime-compose"
+    implementation "androidx.lifecycle:lifecycle-viewmodel-compose"
+    implementation 'androidx.lifecycle:lifecycle-service'
+    implementation "androidx.lifecycle:lifecycle-runtime-ktx"
+    implementation "androidx.compose.material:material-icons-extended"
+    debugImplementation "androidx.compose.ui:ui-tooling"
+    debugImplementation "androidx.compose.ui:ui-test-manifest"
+
+    // Media/Video
     implementation("com.github.bumptech.glide:compose:1.0.0-beta01")
-    implementation("androidx.media3:media3-exoplayer:1.3.0")
-    implementation("androidx.media3:media3-ui:1.3.0")
+    implementation("androidx.media3:media3-exoplayer:1.3.1")
+    implementation("androidx.media3:media3-ui:1.3.1")
 
-    implementation 'com.github.truvideo:truvideo-sdk-android-core:0.2.03'
-    implementation("com.github.truvideo:truvideo-sdk-android-common:0.0.32")
-
-    // Truvideo SDK Components
-    implementation("com.github.truvideo:truvideo-sdk-android-components:0.1.11")
+    // Truvideo SDK
+    implementation(project(":media"))
+    implementation 'com.github.Truvideo:truvideo-sdk-android-core:71.1.1-beta.91'
+    implementation 'com.github.Truvideo:truvideo-sdk-android-components:0.1.17'
 }
