--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -5,26 +5,18 @@
         android:name="android.permission.WRITE_EXTERNAL_STORAGE"
         android:maxSdkVersion="32" />
 
-    <uses-permission
-        android:name="android.permission.READ_EXTERNAL_STORAGE"
-        android:maxSdkVersion="32" />
-
-    <uses-permission android:name="android.permission.READ_MEDIA_VIDEO" />
-    <uses-permission android:name="android.permission.READ_MEDIA_IMAGES" />
-
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.Truvideosdkmedia">
+        android:theme="@style/Theme.TruvideoSdkMedia">
 
         <activity
             android:name=".LoginActivity"
             android:exported="true"
-            android:label="@string/app_name"
-            android:theme="@style/Theme.Truvideosdkmedia">
+            android:theme="@style/Theme.TruvideoSdkMedia">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -33,10 +25,10 @@
         </activity>
 
         <activity
-            android:name=".MainActivity"
+            android:name=".ui.activities.main_activity.MainActivity"
             android:exported="true"
-            android:label="@string/app_name"
-            android:theme="@style/Theme.Truvideosdkmedia" />
+            android:theme="@style/Theme.TruvideoSdkMedia" />
+
     </application>
 
 </manifest>
