--- a/media/src/main/assets/version.properties
+++ b/media/src/main/assets/version.properties
@@ -1,4 +1,4 @@
-versionCode=6601
-versionName=0.66.1
-commonVersion=0.0.66
+versionName=71.1.1
+commonVersion=0.0.71
+environment=beta
 validateAuthentication=true
