--- a/media/build.gradle
+++ b/media/build.gradle
@@ -90,6 +90,7 @@ dependencies {
     testImplementation "org.mockito:mockito-core:5.4.0"
     testImplementation "org.mockito.kotlin:mockito-kotlin:5.0.0"
     testImplementation "io.mockk:mockk:1.13.5"
+    testImplementation 'org.json:json:20240303'
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
 }
