--- a/media/src/main/assets/version.properties
+++ b/media/src/main/assets/version.properties
@@ -1,4 +1,4 @@
-versionName=71.1.12
-commonVersion=0.0.71
-environment=beta
+versionName=72.1.16
+commonVersion=0.0.72
+environment=dev
 validateAuthentication=true
