--- a/app/build.gradle
+++ b/app/build.gradle
@@ -55,10 +55,10 @@ apply from: './lib-flavors.gradle'
 
 dependencies {
     implementation("androidx.core:core-ktx:1.13.1")
-    implementation("androidx.lifecycle:lifecycle-runtime-ktx:2.8.0")
+    implementation("androidx.lifecycle:lifecycle-runtime-ktx:2.8.2")
 
     // Compose
-    implementation platform('androidx.compose:compose-bom:2024.05.00')
+    implementation platform('androidx.compose:compose-bom:2024.06.00')
     implementation "androidx.core:core-ktx"
     implementation "androidx.activity:activity-compose"
     implementation "androidx.compose.ui:ui"
@@ -82,6 +82,6 @@ dependencies {
 
     // Truvideo SDK
     implementation(project(":media"))
-    implementation 'com.github.Truvideo:truvideo-sdk-android-core:71.1.1-beta.91'
     implementation 'com.github.Truvideo:truvideo-sdk-android-components:0.1.17'
+    implementation 'com.github.Truvideo:truvideo-sdk-android-common:0.0.72'
 }
